# Helldivers_2_web_binds

./: .gitignore  app.py  imagePaths.json  pyproject.toml
static/: script.js  stratagems.json  style.css
static/divConfig/: imagePaths.json  stratagemsConfig.json
templates/: index.html
templates/selection/: index.html
