[tool.poetry]
name = "helldivers-2-web-binds"
version = "0.1.0"
description = ""
authors = ["lap1as <kuzukoleg12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
